src/test/deca/syntax/invalid/affectation-lessEqual.synt
affectation-lessEqual.deca:4: